--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 	<h1>index</h1>
 	<p>Welcome, where we can communicate with each other, learn from each other!</p>
+	<p style="border: 1px dashed #ccc;">Welcome, where we can communicate with each other, learn from each other!</p>
 </body>
 </html>
