--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
 </head>
 <body>
 	<h1>Snapshotos</h1>
+	<h1>这个是试试webstorm提交</h1>
 	<a href="http://www.baidu.com" onclick="popUp(this.href); return false;">打开百度</a>
 	<ul>
-		<li><a href="images/black.jpg" alt="" title="A black pic" onclick="showPic(this); return false;">black</a></li>
-		<li><a href="images/car.jpg" alt="" title="A car pic" onclick="showPic(this); return false;">car</a></li>
-		<li><a href="images/color.jpg" alt="" title="A color pic" onclick="showPic(this); return false;">color</a></li>
-		<li><a href="images/diamand.jpg" alt="" title="A diamand pic" onclick="showPic(this); return false;">diamand</a></li>
-		<li><a href="images/dog.jpg" alt="" title="A dog pic" onclick="showPic(this); return false;">dog</a></li>
-		<li><a href="images/grass.jpg" alt="" title="A grass pic" onclick="showPic(this); return false;">grass</a></li>
-		<li><a href="images/shoose.jpg" alt="" title="A shoose pic" onclick="showPic(this); return false;">shoose</a></li>
-		<li><a href="images/snow.jpg" alt="" title="A snow pic" onclick="showPic(this); return false;">snow</a></li>
+		<li><a href="images/black.jpg" title="A black pic" onclick="showPic(this); return false;">black</a></li>
+		<li><a href="images/car.jpg" title="A car pic" onclick="showPic(this); return false;">car</a></li>
+		<li><a href="images/color.jpg" title="A color pic" onclick="showPic(this); return false;">color</a></li>
+		<li><a href="images/diamand.jpg" title="A diamand pic" onclick="showPic(this); return false;">diamand</a></li>
+		<li><a href="images/dog.jpg" title="A dog pic" onclick="showPic(this); return false;">dog</a></li>
+		<li><a href="images/grass.jpg" title="A grass pic" onclick="showPic(this); return false;">grass</a></li>
+		<li><a href="images/shoose.jpg" title="A shoose pic" onclick="showPic(this); return false;">shoose</a></li>
+		<li><a href="images/snow.jpg" title="A snow pic" onclick="showPic(this); return false;">snow</a></li>
 	</ul>
 	<img id="placeholder" src="images/lock.jpg" alt="my img gallery">
 	<p id="description">Choose an image</p>
