--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>Snapshotos</h1>
 	<h1>这个是试试webstorm提交</h1>
+	<h1>这个是试试gitignore提交</h1>
 	<a href="http://www.baidu.com" onclick="popUp(this.href); return false;">打开百度</a>
 	<ul>
 		<li><a href="images/black.jpg" title="A black pic" onclick="showPic(this); return false;">black</a></li>
