--- a/test.html
+++ b/test.html
@@ -5,8 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<div id="testdiv">
+    <!--<p>This is <em>my</em> content.</p>-->
+</div>
+<script src="js/example.js"></script>
 <script>
-    document.write("<p>This is instered.</p>")
+    // insertParagraph("This is inserted.")
 </script>
 </body>
 </html>
