--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 	<h1>Snapshotos</h1>
-	<a href="http://www.baidu.com" onclick="popUp(this.href); return false;">打开百度</a>
-	<ul id="imageGallery" style="overflow: hidden;">
+	<ul id="imageGallery">
 		<li>
             <a href="images/black.jpg" title="A black pic">
                 <img src="images/black.jpg" alt="" width="100" height="75">
@@ -50,15 +49,8 @@
             </a>
         </li>
 	</ul>
-	<img id="placeholder" src="images/lock.jpg" alt="my img gallery">
-	<p id="description">Choose an image</p>
+	<!--<img id="placeholder" src="images/lock.jpg" alt="my img gallery">-->
+	<!--<p id="description">Choose an image</p>-->
 	<script type="text/javascript" src="js/showPic.js"></script>
-	<script type="text/javascript">
-		// window.onload = countBodyChildren;
-	// 	var body_element = document.getElementsByTagName("body")[0];
-	// 	alert(body_element.childNodes.length)
-	// 	alert(body_element.nodeType)
-	// alert(description.firstChild.nodeValue)
-	</script>
 </body>
 </html>
