--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+    <div class="morelinks">
+        <a href="ajax.html">ajax.html</a>
+        <a href="explanation.html">explanation.html</a>
+        <a href="test.html">test.html</a>
+        <a href="indusDemo.html">indusDemo.html</a>
+    </div>
 	<h1>Snapshotos</h1>
 	<ul id="imageGallery">
 		<li>
