--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+    <h1>试试客服</h1>
     <div class="morelinks">
         <a href="ajax.html">ajax.html</a>
         <a href="explanation.html">explanation.html</a>
