试试客服 代码

--- a/index.html
+++ b/index.html
@@ -59,5 +59,98 @@
 	<!--<img id="placeholder" src="images/lock.jpg" alt="my img gallery">-->
 	<!--<p id="description">Choose an image</p>-->
 	<script type="text/javascript" src="js/showPic.js"></script>
+    <a href="#0" class="zhiCustomBtn">自定义咨询入口</a>
+    <script src="https://www.sobot.com/chat/frame/js/entrance.js?sysNum=29bdcb84e3d64e129e6f7ac675b57f31" class="zhiCustomBtn" id="zhichiScript" data-args="属性名1=属性值1&属性名2=属性值2"></script>    <script>
+        var zhiManager = (getzhiSDKInstance());
+        zhiManager.set("color", 'aabbcc');  //取值为0-9a-f共六位16进制字符[主题色]    | 默认取后台设置的颜色
+        zhiManager.set("powered", 'true'); //true[显示悬浮聊天窗体下方公司标识信息]   false[不显示]   | 默认显示
+        zhiManager.set('customBtn', 'true'); //true[自定义按钮]  false[使用系统默认咨询按钮]     | 默认为系统咨询按钮
+        zhiManager.set('manual', 'true');   //true[手动初始化]   false[自动初始化]  | 默认调用后自动初始化
+        zhiManager.set('manTrace', true);   //true[开启用户访问轨迹收集]  false[不开启]  |默认不开启用户访问轨迹收集
+        zhiManager.set('title', '我是a文b案啦啦不超20'); //咨询按钮文案
+        zhiManager.set('isInviteFlag', 'true'); //true[开启主动邀请功能]  false[不开启] |默认不开启
+        zhiManager.set('location', 1); //1[系统默认按钮靠右显示]  3[系统默认按钮靠左显示]
+        zhiManager.set('horizontal', 100); //水平边距 px
+        zhiManager.set('vertical', 50); //垂直边距  px
+        zhiManager.set('tipTitle', '客服邀请您进入会话'); //主动邀请文案
+        zhiManager.set('submitBtnTitle', '接受邀请'); //主动邀请功能接受按钮文案
+        zhiManager.set('invite', 1); // 是否开启自动邀请  1 开启 0 关闭  | 默认关闭
+        zhiManager.set('firstTimeout', 1); // 第一次加载延迟邀请时间   时间为秒
+        zhiManager.set('overTimeout', 10); //拒绝后再次邀请时间       时间为秒
+        zhiManager.set('inviteCount', 1); //一天之内共邀请多少次
+        zhiManager.set('lan', 'cn'); //支持语言   cn 中文  en 英文   默认为 中文
+        zhiManager.set('telShowFlag', 'true');   //true[显示手机号输入框]  false[不显示] |  默认显示
+        zhiManager.set('telFlag', 'false');  //true[手机号为必填项]  false[为选填项]  | 默认必填
+        zhiManager.set('satDegree_A', true); //true[开启主动评价功能] false[不开启] | 默认开启
+        zhiManager.set('msgflag', false); //false[开启窗体和结束会话后的留言功能] true[不开启] | 默认开启
+        zhiManager.set('isMessageFlag', true); //true[开启输入框留言功能] false[不开启] | 默认开启
+        zhiManager.set('isFeedBackFlag', true); //true[开启输入框满意度评价功能] false[不开启] | 默认开启
+        zhiManager.set('artificial', 1);  //true[默认隐藏转人工 遇未知问题时显示转人工]   false[直接显示转人工]  | 默认不隐藏转人工
+        zhiManager.set('groupId','xxxxxxxxxxxxxx');   //指定技能组
+        //对接用户身份、预留字段、自定义字段（旧版，不推荐）
+        zhiManager.set('userinfo', { //设置用户信息
+            tel: '',   //电话或手机
+            email: '',   //邮箱
+            uname: '',   //昵称
+            visitTitle: '',   //对话页标题，若不传入系统将获取用户打开咨询组件时所在页面的标题
+            visitUrl: '',   //对话页URL，若不传入系统将获取用户打开咨询组件时所在页面的URL
+            face: '',   //头像URL
+            realname: '',   //真实姓名
+            weibo: '',   //微博账号
+            weixin: '',   //微信账号
+            qq: '',   //QQ号
+            sex: '', //0 男 1 女
+            birthday: '',   //生日，如“1990-01-01”
+            remark: '',   //用户的备注信息
+            params: '{"等级":"VIP用户","客户状态":"意向客户"}'   //自定义用户信息字段
+        });
+        //对接用户身份、预留字段、自定义字段（新版，推荐）
+        var obj ={"weibo":"weicat","sex":"女","birthday":"2017-05-17","cardType":"身份   证","cardNo":"13010319xxxx56xxxx","address":"北京","position":"tl","remark":"g   ood","customField1":"12","customField2":"text"};
+        var objStr = JSON.stringify(obj);
+        zhiManager.set("customerFields", objStr);
+        zhiManager.set('size', { //悬浮窗宽度与高度
+            // 最小宽度360像素，最大宽度640像素，默认360像素
+            'width': 460,
+            // 最小高度430像素，最大高度720像素，默认540像素
+            'height': 680
+        });
+        zhiManager.set('preVisitArgs',{
+            'preAbstract':'来源页的摘要  可不传',
+            'preVisitUrl':'来源页的url   可不传',
+            'preVisitTitle':'来源页的标题    可不传',
+            'preThumbnail':'来源页的缩略图  可不传',
+            'preTags' :'来源页的标签    可不传'
+        });
+        zhiManager.set('curVisitArgs',{
+            'curAbstract':'当前页的摘要  可不传',
+            'curVisitUrl':'当前页的url   可不传',
+            'curVisitTitle':'当前页的标题    可不传',
+            'curThumbnail':'当前页的缩略图  可不传',
+            'curTags' :'当前页的标签    可不传'
+        });
+        //通过参数设置H5聊天页面显示商品信息内容
+        zhiManager.set("title_info","智齿_商品详情页_小智智能");  //必传 需编码
+        zhiManager.set("url_info","http://www.sobot.com/order/zc.html"); //必传 需编码
+        zhiManager.set("abstract_info","更精确的理解，更精确地回答，在闲聊寒暄中，拉近与客户的距离，导入知识库，意想不到的方便快捷，最简单的知识添加，事半功倍。"); //需编码
+        zhiManager.set("label_info","2000"); //需编码
+        zhiManager.set("thumbnail_info","http://test.sobot.com/console/images/logo_new.png"); //需编码
+        //自定义按钮后可设置该值改变悬浮窗的水平位置
+        zhiManager.set("customMargin",200);
+        //手动初始化时 通过 load 方法调用 js 组件
+        zhiManager.on("load", function(ret) {
+            zhiManager.initBtnDOM();
+        });
+        //自定义按钮时 通过该方法获取客服发送的未读内容 & 消息数
+        zhiManager.on("receivemessage", function(ret) {
+            /**
+             * 返回格式：[{content:'您好',msgId:'615b0a3801804f14be1d456e11b329af',customName:'智齿科技'}]
+             */
+            console.log(ret);
+        });
+        //自定义按钮时 通过该方法获取客服发送的离线消息数
+        zhiManager.on("unread.count",function(data){
+            console.log(data);
+        });
+    </script>
 </body>
 </html>
