--- a/indusDemo.html
+++ b/indusDemo.html
@@ -86,7 +86,7 @@
                 </ul>
             </div>
         </div>
-        <div class="gap2" style="position: relative;">
+        <div class="flexColumn gap2" style="position: relative; padding-bottom: 27px;">
             <span class="mainTitlt blueStyle" style="position: absolute; top: 10px; left: 9%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">电池</span>
             <span class="mainTitlt" style="color: #B8871A; position: absolute; top: 10px; left: 50%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">机体结构件</span>
             <span class="mainTitlt redStyle" style="position: absolute; top: 10px; left: 76%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">电调</span>
@@ -142,7 +142,7 @@
             </div>
         </div>
     </div>
-    <div class="flexRow" style="margin-top: -27px;">
+    <div class="flexRow" style="margin-top: -54px;">
         <div class="yellowStyle wrapBox gap1_35">
             <p class="mainTitlt">遥控器接收器</p>
             <ul class="firmLists">
