--- a/indusDemo.html
+++ b/indusDemo.html
@@ -87,13 +87,13 @@
             </div>
         </div>
         <div class="flexColumn gap2" style="position: relative;">
-            <span class="mainTitlt blueStyle" style="position: absolute; top: 10px; left: 9%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">电池</span>
-            <span class="mainTitlt" style="color: #B8871A; position: absolute; top: 10px; left: 50%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">机体结构件</span>
-            <span class="mainTitlt redStyle" style="position: absolute; top: 10px; left: 76%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">电调</span>
-            <span class="mainTitlt lightGreenStyle" style="position: absolute; top: 10px; left: 95%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">电机</span>
-            <span class="mainTitlt deepGreenStyle" style="position: absolute; top: 48%; left: 3%; transform: translateY(-50%);-webkit-transform: translateY(-50%)">飞行控制</span>
-            <span class="mainTitlt blueStyle" style="position: absolute; top: 40%; right: 3%; transform: translateY(-50%);-webkit-transform: translateY(-50%)">云台</span>
-            <span class="mainTitlt blueStyle" style="position: absolute; top: 75%; right: 3%; transform: translateY(-50%);-webkit-transform: translateY(-50%)">摄像机</span>
+            <!--<span class="mainTitlt blueStyle" style="position: absolute; top: 10px; left: 9%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">电池</span>-->
+            <!--<span class="mainTitlt" style="color: #B8871A; position: absolute; top: 10px; left: 50%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">机体结构件</span>-->
+            <!--<span class="mainTitlt redStyle" style="position: absolute; top: 10px; left: 76%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">电调</span>-->
+            <!--<span class="mainTitlt lightGreenStyle" style="position: absolute; top: 10px; left: 95%; transform: translateX(-50%);-webkit-transform: translateX(-50%)">电机</span>-->
+            <!--<span class="mainTitlt deepGreenStyle" style="position: absolute; top: 48%; left: 3%; transform: translateY(-50%);-webkit-transform: translateY(-50%)">飞行控制</span>-->
+            <!--<span class="mainTitlt blueStyle" style="position: absolute; top: 40%; right: 3%; transform: translateY(-50%);-webkit-transform: translateY(-50%)">云台</span>-->
+            <!--<span class="mainTitlt blueStyle" style="position: absolute; top: 75%; right: 3%; transform: translateY(-50%);-webkit-transform: translateY(-50%)">摄像机</span>-->
             <img src="images/fly.png" alt="pic" class="gap2" style="max-width:800px; height:auto; position: relative; z-index: -1;">
         </div>
         <div class="flexColumn gap1">
