test.html modified

--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
             width: 550px;
             border: 1px dashed #ddd;
             position: relative;
+            display: inline-block;
         }
         .proLists .proTop{
             position: absolute;
@@ -90,9 +91,9 @@
         .proLists .bgcolor6{background-color: rgba(108,167,22,0.9);}/*绿色*/
         .proLists .arrowBefore.bgcolor6:before{border-top-color: rgba(108,167,22,0.9);}
         .proLists .arrowAfter.bgcolor6:before{border-bottom-color: rgba(108,167,22,0.9);}
-        /*.proLists .bgcolor7{background-color: #c046b9;}!*紫粉色*!*/
-        /*.proLists .arrowBefore.bgcolor7:before{border-top-color: #c046b9;}*/
-        /*.proLists .arrowAfter.bgcolor7:before{border-bottom-color: #c046b9;}*/
+        .proLists .bgcolor7{background-color: rgba(192,70,185,0.7);}/*紫粉色*/
+        .proLists .arrowBefore.bgcolor7:before{border-top-color: rgba(192,70,185,0.7);}
+        .proLists .arrowAfter.bgcolor7:before{border-bottom-color: rgba(192,70,185,0.7);}
         @media (max-width: 767px) {
             /*科技服务产品适配*/
             .proLists .proLabel {
@@ -140,6 +141,30 @@
             <a href="javascript:;" class="proLabel arrowAfter bgcolor6 clearfix">无形资产评估</a>
             <a href="javascript:;" class="proLabel arrowAfter bgcolor6 clearfix">人力资源咨询</a>
             <a href="javascript:;" class="proLabel arrowAfter bgcolor6 clearfix">高新技术企业认定</a>
+        </div>
+    </div>
+
+</div>
+<div class="bgWhite proLists">
+    <div class="proTop">
+        <div class="text-center">
+            <a href="javascript:;" class="proLabel arrowBefore bgcolor1 clearfix">财税服务</a>
+            <a href="javascript:;" class="proLabel arrowBefore bgcolor2 clearfix">软件测试</a>
+            <a href="javascript:;" class="proLabel arrowBefore bgcolor3 clearfix">产品认证</a>
+            <a href="javascript:;" class="proLabel arrowBefore bgcolor6 clearfix">人才培训</a>
+            <a href="javascript:;" class="proLabel arrowBefore bgcolor7 clearfix">人事服务</a>
+            <a href="javascript:;" class="proLabel arrowBefore bgcolor1 clearfix">项目申报</a>
+            <a href="javascript:;" class="proLabel arrowBefore bgcolor2 clearfix">信用评级</a>
+            <a href="javascript:;" class="proLabel arrowBefore bgcolor3 clearfix">专利代理</a>
+        </div>
+    </div>
+    <div class="proBottom">
+        <div class="text-center">
+            <a href="javascript:;" class="proLabel arrowAfter bgcolor6 clearfix">增长点咨询</a>
+            <a href="javascript:;" class="proLabel arrowAfter bgcolor7 clearfix">企业上云服务</a>
+            <a href="javascript:;" class="proLabel arrowAfter bgcolor1 clearfix">无形资产评估</a>
+            <a href="javascript:;" class="proLabel arrowAfter bgcolor2 clearfix">人力资源咨询</a>
+            <a href="javascript:;" class="proLabel arrowAfter bgcolor3 clearfix">高新技术企业认定</a>
         </div>
     </div>
 
