--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
 	<!--<img id="placeholder" src="images/lock.jpg" alt="my img gallery">-->
 	<!--<p id="description">Choose an image</p>-->
 	<script type="text/javascript" src="js/showPic.js"></script>
-    <!--<script type="text/javascript" charset="utf-8" src="http://lead.soperson.com/20001253/10103443.js"></script>-->
+    <script type="text/javascript" charset="utf-8" src="http://lead.soperson.com/20001253/10103443.js"></script>
 </body>
 </html>
